commented out: margin from my image to fix my-image center alignment in media queries

--- a/css/index.css
+++ b/css/index.css
@@ -34,7 +34,7 @@ main {
 .my-image {
   width: 80%;
   border-radius: 3%;
-  margin: 0 2.5%;
+  /* margin: 0 2.5%; */
 }
 
 .about-me-side {
